--- a/app/css/vendor.css
+++ b/app/css/vendor.css
@@ -1205,4 +1205,4 @@ button.swiper-pagination-bullet {
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
   overflow: hidden;
-}/*# sourceMappingURL=vendor.css.map */
+}
